--- a/DotNetCoreWebAPI.csproj
+++ b/DotNetCoreWebAPI.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.6"/>
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.6"/>
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0"/>
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="Content">
