--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "DotNetCoreWebAPI.Controllers": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MailAddress": {
+    "MailFrom": "fromdeveloper@contoso.com",
+    "MailTo": "todeveloper@contoso.com"
   }
 }
