--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailAddress": {
+    "MailFrom": "fromdefault@contoso.com",
+    "MailTo": "todefault@contoso.com"
+  }
 }
