Added EF with SQLite and Migrations

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,5 +9,8 @@
   "MailAddress": {
     "MailFrom": "fromdeveloper@contoso.com",
     "MailTo": "todeveloper@contoso.com"
+  },
+  "ConnectionStrings": {
+    "DbConnectionString": "Data Source=CityInfo.db"
   }
 }
