--- a/DotNetCoreWebAPI.csproj
+++ b/DotNetCoreWebAPI.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.6"/>
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0"/>
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.6"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="Content">
