--- a/DotNetCoreWebAPI.csproj
+++ b/DotNetCoreWebAPI.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.6"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="Content">
