Added Pagination to GetAllCities

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,5 +12,8 @@
   },
   "ConnectionStrings": {
     "DbConnectionString": "Data Source=CityInfo.db"
+  },
+  "ApiSettings": {
+    "MaxPageSize": 100
   }
 }
