Added endpoint to create Jwt tokens and authorize

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -15,5 +15,19 @@
   },
   "ApiSettings": {
     "MaxPageSize": 100
+  },
+  "Authentication": {
+    "Username": "deep",
+    "Password": "topsecret",
+    "SecretKey": "mysupersecretprivatekeyrandomnvalue",
+    "Issuer": "localhost",
+    "Audience": "CityInfo",
+    "Claims": {
+      "Identifier": 1,
+      "UserName": "deep",
+      "FirstName": "deepak",
+      "LastName": "agarwal",
+      "CityName": "Antwerp"
+    }
   }
 }
