--- a/DotNetCoreWebAPI.csproj
+++ b/DotNetCoreWebAPI.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.6"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.6"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.21.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.21.0"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="Content">
