--- a/Authentication/ApiKey/appsettings.json
+++ b/Authentication/ApiKey/appsettings.json
@@ -6,8 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "MailAddress": {
-    "MailFrom": "fromdefault@contoso.com",
-    "MailTo": "todefault@contoso.com"
-  }
+  "ApiKey": "secret"
 }
