--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -9,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/Authentication/ApiKey/bin/Debug/net7.0/ApiKey.dll",
+            "program": "${workspaceFolder}/Authentication/SwaggerApiKeySecurity/bin/Debug/net7.0/SwaggerApiKeySecurity.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
@@ -24,9 +21,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Authentication/ApiKey/bin/Debug/net7.0/ApiKey.dll",
+            "program": "${workspaceFolder}/Authentication/SwaggerApiKeySecurity/bin/Debug/net7.0/SwaggerApiKeySecurity.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Authentication/ApiKey",
+            "cwd": "${workspaceFolder}/Authentication/SwaggerApiKeySecurity",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
@@ -45,6 +42,5 @@
             "type": "coreclr",
             "request": "attach"
         }
-
     ]
 }
