--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Authentication/SwaggerApiKeySecurity/bin/Debug/net7.0/SwaggerApiKeySecurity.dll",
+            "program": "${workspaceFolder}/CityInfo.API/GettingStarted/bin/Debug/net7.0/GettingStarted.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Authentication/SwaggerApiKeySecurity",
+            "cwd": "${workspaceFolder}/CityInfo.API/GettingStarted",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
