--- a/Authentication/TokenIssuer/appsettings.Development.json
+++ b/Authentication/TokenIssuer/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "Authentication": {
     "SecretForKey": "thisisthesecretforgeneratingakey(mustbeatleast32bitlong)",
-    "Issuer": "https://localhost:5025",
+    "Issuer": "http://localhost:5025",
     "Audience": "weatherforecastapi"
   }
 }
